# same-model-same-task

./: .gitignore  README.md  package.json  pyproject.toml  tsconfig.json
dashboard/: next.config.ts  package.json
dashboard/app/: layout.tsx  opengraph-image.tsx  page.tsx
dashboard/app/[framework]/: page.tsx
dashboard/app/findings/: page.tsx
dashboard/app/methodology/: page.tsx
dashboard/components/: framework-findings-callout.tsx  leaderboard.tsx  pareto-chart.tsx  site-nav.tsx  theme-toggle.tsx  tokens-stack-chart.tsx
dashboard/components/findings/: latency-strip-chart.tsx  per-job-heatmap.tsx  quality-per-dollar-chart.tsx  token-breakdown-chart.tsx
dashboard/data/: summary.json
dashboard/lib/: stats.ts
data/: candidates.json  jobs.json
docs/plans/: 2026-05-07-same-model-same-task-design.md  2026-05-08-readme-dashboard-design.md  2026-05-08-readme-dashboard.md  2026-05-10-coherence-drift-fixes.md  2026-05-10-deterministic-scorer-design.md  2026-05-10-deterministic-scorer.md  scouting-results.md  task-spec.md
frameworks/_shared/python/: __init__.py  (+5 more)
harness/: gold_ranking.py  judge.py  run_bench.py  score_deterministic.py
results/: summary.md
results/headline/: baseline-python.json  baseline-typescript.json  crewai.json  google-adk.json  langgraph.json  mastra.json  pydantic-ai.json  vercel-ai-sdk.json
scripts/: summarize.py  test_deterministic_scorer.py  test_summarize.py  test_tools_parity.py
scripts/fixtures/: run-frameworkA-job-001.json  run-frameworkA-job-002.json  run-frameworkB-job-001.json
tools/python/: __init__.py  tools.py
(+16 files in other folders)
